Add input attributes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="area">
 		<h2>To Do List</h2>
 		<form name="checkListForm">
-			<input type="text" name="checkListItem"/>
+			<input autofocus placeholder="Input something to do!" type="text" name="checkListItem"/>
 		</form>
 		<div id="button">Add!</div>
 		<div id="clear">Clear all.</div>
