Add ability to edit tasks + few small style tweaks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<div id="button">Add!</div>
 		<div id="clear">Clear all.</div>
 		<br/><hr>
-		<div class="list"></div>
+		<div class="list">
+			<p class="info">Double click an event to edit! - (click me away)</p><hr>
+		</div>
 	</div>
 	<script type="text/javascript" src="main.js"></script>
 </body>
