--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 		<div id="button">Add!</div>
 		<div id="clear">Clear all.</div>
 		<br/><hr>
-		<div class="list">
-			<p class="info">Double click an event to edit! - (click me away)</p><hr>
+		<div>
+			<p class="info">Double click an event to edit! - <span class="remover2">X</span></p><hr>
 		</div>
+		<div class="list"></div>
 	</div>
 	<script type="text/javascript" src="main.js"></script>
 </body>
